tests/include_warnings_client/include_warnings_client.exp
Without --include-warnings
Error ------------------------------------------------------------------------------------------------------ test.js:7:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:7:5
   7| if (x) {} //Error
          ^

References:
   test.js:4:9
   4| var x: ?number = 0;
              ^^^^^^ [1]
   test.js:4:8
   4| var x: ?number = 0;
             ^^^^^^^ [2]



Found 1 error


With --include-warnings
Error ------------------------------------------------------------------------------------------------------ test.js:7:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:7:5
   7| if (x) {} //Error
          ^

References:
   test.js:4:9
   4| var x: ?number = 0;
              ^^^^^^ [1]
   test.js:4:8
   4| var x: ?number = 0;
             ^^^^^^^ [2]


Warning --------------------------------------------------------------------------------------------------- test.js:10:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:10:5
   10| if (x) {} //Warning
           ^

References:
   test.js:4:9
    4| var x: ?number = 0;
               ^^^^^^ [1]
   test.js:4:8
    4| var x: ?number = 0;
              ^^^^^^^ [2]



Found 1 error and 1 warning


JSON without --include-warnings
{
  "errors":[
    {
      "error_codes":["sketchy-null-number"],
      "extra":[
        {
          "message":[
            {
              "context":null,
              "descr":"References:",
              "end":0,
              "endline":0,
              "line":0,
              "path":"",
              "start":1,
              "type":"Blame"
            }
          ]
        },
        {
          "message":[
            {
              "context":"var x: ?number = 0;",
              "descr":"[1]",
              "end":14,
              "endline":4,
              "line":4,
              "loc":{
                "end":{"column":14,"line":4,"offset":64},
                "source":"test.js",
                "start":{"column":9,"line":4,"offset":58},
                "type":"SourceFile"
              },
              "path":"test.js",
              "start":9,
              "type":"Blame"
            }
          ]
        },
        {
          "message":[
            {
              "context":"var x: ?number = 0;",
              "descr":"[2]",
              "end":14,
              "endline":4,
              "line":4,
              "loc":{
                "end":{"column":14,"line":4,"offset":64},
                "source":"test.js",
                "start":{"column":8,"line":4,"offset":57},
                "type":"SourceFile"
              },
              "path":"test.js",
              "start":8,
              "type":"Blame"
            }
          ]
        }
      ],
      "kind":"lint",
      "level":"error",
      "message":[
        {
          "context":"if (x) {} //Error",
          "descr":"Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? [sketchy-null-number]",
          "end":5,
          "endline":7,
          "line":7,
          "loc":{
            "end":{"column":5,"line":7,"offset":116},
            "source":"test.js",
            "start":{"column":5,"line":7,"offset":115},
            "type":"SourceFile"
          },
          "path":"test.js",
          "start":5,
          "type":"Blame"
        }
      ],
      "suppressions":[]
    }
  ],
  "jsonVersion":"1",
  "passed":false
}


JSON with --include-warnings
{
  "errors":[
    {
      "error_codes":["sketchy-null-number"],
      "extra":[
        {
          "message":[
            {
              "context":null,
              "descr":"References:",
              "end":0,
              "endline":0,
              "line":0,
              "path":"",
              "start":1,
              "type":"Blame"
            }
          ]
        },
        {
          "message":[
            {
              "context":"var x: ?number = 0;",
              "descr":"[1]",
              "end":14,
              "endline":4,
              "line":4,
              "loc":{
                "end":{"column":14,"line":4,"offset":64},
                "source":"test.js",
                "start":{"column":9,"line":4,"offset":58},
                "type":"SourceFile"
              },
              "path":"test.js",
              "start":9,
              "type":"Blame"
            }
          ]
        },
        {
          "message":[
            {
              "context":"var x: ?number = 0;",
              "descr":"[2]",
              "end":14,
              "endline":4,
              "line":4,
              "loc":{
                "end":{"column":14,"line":4,"offset":64},
                "source":"test.js",
                "start":{"column":8,"line":4,"offset":57},
                "type":"SourceFile"
              },
              "path":"test.js",
              "start":8,
              "type":"Blame"
            }
          ]
        }
      ],
      "kind":"lint",
      "level":"error",
      "message":[
        {
          "context":"if (x) {} //Error",
          "descr":"Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? [sketchy-null-number]",
          "end":5,
          "endline":7,
          "line":7,
          "loc":{
            "end":{"column":5,"line":7,"offset":116},
            "source":"test.js",
            "start":{"column":5,"line":7,"offset":115},
            "type":"SourceFile"
          },
          "path":"test.js",
          "start":5,
          "type":"Blame"
        }
      ],
      "suppressions":[]
    },
    {
      "error_codes":["sketchy-null-number"],
      "extra":[
        {
          "message":[
            {
              "context":null,
              "descr":"References:",
              "end":0,
              "endline":0,
              "line":0,
              "path":"",
              "start":1,
              "type":"Blame"
            }
          ]
        },
        {
          "message":[
            {
              "context":"var x: ?number = 0;",
              "descr":"[1]",
              "end":14,
              "endline":4,
              "line":4,
              "loc":{
                "end":{"column":14,"line":4,"offset":64},
                "source":"test.js",
                "start":{"column":9,"line":4,"offset":58},
                "type":"SourceFile"
              },
              "path":"test.js",
              "start":9,
              "type":"Blame"
            }
          ]
        },
        {
          "message":[
            {
              "context":"var x: ?number = 0;",
              "descr":"[2]",
              "end":14,
              "endline":4,
              "line":4,
              "loc":{
                "end":{"column":14,"line":4,"offset":64},
                "source":"test.js",
                "start":{"column":8,"line":4,"offset":57},
                "type":"SourceFile"
              },
              "path":"test.js",
              "start":8,
              "type":"Blame"
            }
          ]
        }
      ],
      "kind":"lint",
      "level":"warning",
      "message":[
        {
          "context":"if (x) {} //Warning",
          "descr":"Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? [sketchy-null-number]",
          "end":5,
          "endline":10,
          "line":10,
          "loc":{
            "end":{"column":5,"line":10,"offset":174},
            "source":"test.js",
            "start":{"column":5,"line":10,"offset":173},
            "type":"SourceFile"
          },
          "path":"test.js",
          "start":5,
          "type":"Blame"
        }
      ],
      "suppressions":[]
    }
  ],
  "jsonVersion":"1",
  "passed":false
}

